# open-source-nvr

./: .gitignore  README.md  ROADMAP.md  camera1_ffmpeg.service  ffmpeg_runcheck.sh  ffmpeg_start.sh  index.html  movmentpoll.js  package-lock.json  package.json  server.js  server_fetch.js  test-db.mjs  tsconfig.json  vite.config.mjs  vitest.config.ts
.github/: copilot-instructions.md
.github/agents/: Update Code to Align with Requirements.agent.md
.github/prompt/: integrate_ai_into_movement.prompt.md
.github/prompts/: 1_review_code_and_optimise.prompt.md  1_the_movement_pipeline.prompt.md  done_1_unit_tests.prompt.md  review_code_and_optimise.prompt.md
ai/: .gitignore  README.md  pyproject.toml
ai/detector/: __init__.py  detect.py  detect_stub.py  shapes_helper.py
ai/py_utils/: onnx_executor.py
detector/: .gitignore  README.md  detect.py  requirements.txt
detector_model/: README.md
docs/: prometheus-metrics.md  required-server-program-structure.md
playwright-report/: index.html
public/: index.html
server/: atomic.ts  diskcheck.ts  index.ts  jobmanager.ts  logger.ts  metrics.ts  process-utils.ts  processor.ts  server_fetch.ts  sse-manager.ts  tsconfig.json  www.ts
src/: App.css  App.js  App.jsx  PanelSettings.js  PanelSettings.jsx  PanelStats.jsx  index.js  index.jsx
test/: camera-movement-detection.test.ts  ffmpeg-process.test.ts  ml-detection.test.ts  ml-restart.test.ts  server-integration.test.ts
test-db-error/: LOG
test/helpers/: mock-camera-server.ts  test-database.ts  test-server.ts
