[project]
name = "open-source-nvr-detector"
version = "0.1.0"
description = "Object detection module for Open Source NVR system"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["object-detection", "nvr", "computer-vision", "rknn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.4,<=1.26.4",
    "opencv-python-headless>=4.5.0",
    "onnxruntime>=1.15.0",  # For ONNX inference
    "rknn-toolkit2>=2.3.2" # For RKNN inference
]



[project.scripts]
nvr-detect = "detector.detect:main"

[project.urls]
Homepage = "https://github.com/your-username/open-source-nvr"
Repository = "https://github.com/your-username/open-source-nvr"
Issues = "https://github.com/your-username/open-source-nvr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["detector*", "py_utils*"]
